--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "formidable": "^3.5.1",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "^1.6.5",
     "replicate": "^0.25.2",
-    "sharp": "^0.33.2",
-    "formidable": "^3.5.1"
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.6",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
